--- a/views/css/everpsblog-columns.css
+++ b/views/css/everpsblog-columns.css
@@ -1,4 +1,3 @@
-
 /*Columns blocks*/
 .columns_everblog_wrapper {
     box-shadow: 2px 2px 8px 0 rgba(0,0,0,.2);
@@ -9,6 +8,16 @@
 #left-column .category_wrapper ul, #right-column .category_wrapper ul {
     list-style: circle;
     list-style-position: inside;
+}
+#left-column .columns_everblog_wrapper .carousel-indicators li{
+    border: 1px solid #00000085;
+}
+#left-column .columns_everblog_wrapper .carousel-indicators li.active{
+    background: #2fb5d2;
+    border: none;
+}
+#left-column .columns_everblog_wrapper .carousel-item{
+    min-height: 325px;
 }
 #left-column .tag_wrapper .tag, #right-column .tag_wrapper .tag {
     /*float:left;*/
@@ -94,7 +103,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#fee18d', EndColorStr='#fec86c');
     border-color:#e1b160;
 }
- 
+
 #left-column .tag_wrapper .tag:hover:before, #right-column .tag_wrapper .tag:hover:before {
     background-image: -webkit-linear-gradient(left top, rgb(254, 225, 141), rgb(254, 200, 108));
     background-image: -moz-linear-gradient(left top, rgb(254, 225, 141), rgb(254, 200, 108));
