--- a/views/css/everpsblog.css
+++ b/views/css/everpsblog.css
@@ -108,33 +108,33 @@
 /* Social links */
 .twitter:before {
     content: "";
-    background-image: url(twitter.svg);
+    background-image: url(../img/twitter.svg);
     background-size: cover;
 }
 .facebook:before {
     content: "";
-    background-image: url(facebook.svg);
+    background-image: url(../img/facebook.svg);
     background-size: cover;
     background-position: center;
 }
 .linkedin:before {
     content: "";
-    background-image: url(linkedin.svg);
+    background-image: url(../img/linkedin.svg);
     background-size: cover;
     background-position: center;
 }
 .facebook.icon-gray {
-    background-image: url(facebook.svg);
+    background-image: url(../img/facebook.svg);
     background-size: cover;
     background-position: center;
 }
 .twitter.icon-gray {
-    background-image: url(twitter.svg);
+    background-image: url(../img/twitter.svg);
     background-size: cover;
     background-position: center;
 }
 .linkedin.icon-gray {
-    background-image: url(linkedin.svg);
+    background-image: url(../img/linkedin.svg);
     background-size: cover;
     background-position: center;
 }
