Added views count on post, category, tag and author New rule : show post views count on front-office Improved banned users and emails on post comment Removed nofilter on titles (added escape HTML instead) Fix some fr translations, added new ones Added little margin on tpl files, changed post bottom informations size on desktop Improved upgrade checker

--- a/views/css/everpsblog.css
+++ b/views/css/everpsblog.css
@@ -62,6 +62,9 @@
 .author-icon{
     max-width: 40px;
 }
+#module-everpsblog-post .social-sharing{
+    margin-top: 0;
+}
 /*Rewriting bad themes*/
 #module-everpsblog-post #evercomment{
     display: block!important;
