--- a/views/css/black.css
+++ b/views/css/black.css
@@ -1,35 +1,5 @@
-.page-everblog #content-wrapper a:not(.btn-blog-primary),
-.page-everblog #right-column a:not(.btn-blog-primary),
-.page-everblog #left-column a:not(.btn-blog-primary){
-    color: #171010;
+.everblack,
+.everblack p,
+.everblack span{
+	color: #000;
 }
-.page-everblog #content-wrapper a:not(.btn-blog-primary):hover,
-.page-everblog #right-column a:not(.btn-blog-primary):hover,
-.page-everblog #left-column a:not(.btn-blog-primary):hover{
-    color: #3d3939;
-}
-.page-everblog #content-wrapper .btn-blog-primary,
-.page-everblog #right-column .btn-blog-primary,
-.page-everblog #left-column .btn-blog-primary{
-    background-color: #171010;
-    color:#fff;
-}
-.page-everblog #content-wrapper .btn-blog-primary:active,
-.page-everblog #content-wrapper .btn-blog-primary:hover,
-.page-everblog #left-column .btn-blog-primary:active,
-.page-everblog #left-column .btn-blog-primary:hover,
-.page-everblog #right-column .btn-blog-primary:active,
-.page-everblog #right-column .btn-blog-primary:hover{
-    background-color: #3d3939;
-}
-.everpsblogcontent{
-    color: #7a7a7a;
-}
-.page-everblog #right-column .h6 a,
-.page-everblog #left-column .h6 a{
-    color: #363a42;
-}
-.page-everblog .product-flags li.product-flag{
-    background-color: #171010;
-}
-
