Added d-flex bootstrap CSS Added new shortcode information on configure template file Set all home HTML code into div with class bloghome

--- a/views/css/everpsblog-all.css
+++ b/views/css/everpsblog-all.css
@@ -4263,3 +4263,9 @@
 .text-center{
     text-align: center;
 }
+.d-flex{
+    display: flex;
+}
+.justify-content-center{
+    justify-content: center;
+}
