--- a/views/css/custom.css
+++ b/views/css/custom.css
@@ -1,5 +1,11 @@
 /* just to avoid error in console log */
 .everpsblog-search input[type="search"] {
-    border-radius: 0.25rem;
+    /* Keep outer rounding only on the left side */
+    border-radius: .25rem 0 0 .25rem;
     max-width: 350px;
+}
+
+/* Match search button rounding with the input */
+.everpsblog-search button[type="submit"] {
+    border-radius: 0 .25rem .25rem 0;
 }
